Structured into multiple projects, added an empty test project.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/super-rpc.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "${workspaceFolder}/super-rpc.sln"
             ],
             "problemMatcher": "$msCompile"
         },
