--- a/super-rpc.tests/super-rpc.tests.csproj
+++ b/super-rpc.tests/super-rpc.tests.csproj
@@ -25,6 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\super-rpc.net\super-rpc.csproj" />
